# sn-mcp-agent

./: .gitignore  .htpasswd  README.md  client.py  default.conf  default_example.conf  demo_ui.py  docker-compose.yml  mcp_server.py  mcp_server_csv.py  nginx.conf  requirements.txt
React-app/: package-lock.json  package.json
React-app/src/: App.jsx
agent/: graph.py  react.py  state.py
api/: Dockerfile  client.py  requirements.txt
api/agent/: graph.py  react.py  state.py
api/model/: module.py
api/prompt/: p.py
mcp/: Dockerfile  mcp_server.py  requirements.txt
mcp-server/: .gitignore
mcp-server/mcp/: main.py  pyproject.toml
mcp-tool-opal/: .env  .gitignore  client.py  main.py  pyproject.toml  requirements.txt
model/: module.py
my-app/: Dockerfile  next.config.mjs  package-lock.json  package.json
my-app/app/: page.js  page.module.css
my-app/app/chat/: page.js  page.module.css
my-app/app/chat/components/: ChatBox.js  InputContainer.js  MarkdownPreview.js  Message.js  ToolBar.js
my-app/app/chat/hooks/: useChat.js
my-app/app/chat/services/: apiServices.js
my-app/app/chat/utils/: pdfGenerator.js
my-app/app/component/: chartOptions.js  charttopdf.js  excelexport.js  exportall.js  markdownpdf.js  rendermarkdown.js  toolbar.js
my-app/app/csv/: csv.module.css  page.js
prompt/: p.py
sn-project-mcp/: .gitignore  main.py
