[project]
name = "mcp-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-mcp-adapters>=0.0.10",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.1",
]
